# multi2convai

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  README.md  environment.yml  setup.cfg  setup.py
docs/: conf.py  index.md
models/: .gitignore  README.md
models/corona/: README.md
models/embeddings/: .gitignore  README.md
models/embeddings/fasttext/: README.md
models/embeddings/transformers/: README.md
models/logistics/: README.md
models/quality/: README.md
notebooks/: template.ipynb
scripts/: run_inference.py  serialize_fasttext.py  train_model.py
src/multi2convai/data/: label.py  vocab.py
src/multi2convai/models/: logistic_regression.py
src/multi2convai/pipelines/: base.py  multilingual_domain_mappings.py
src/multi2convai/pipelines/inference/: base.py  logistic_regression_base.py  logistic_regression_fasttext.py
src/multi2convai/preprocessing/: embedding.py  loading.py  preprocessor.py  word_tokenizer.py
tests/: conftest.py
tests/data/: test_label.py  test_vocab.py
tests/models/: test_models.py
tests/pipelines/: test_base.py
tests/pipelines/inference/: test_base.py  test_logistic_regression_base.py  test_logistic_regression_fasttext.py
tests/preprocessing/: test_embedding.py  test_loading.py  test_preprocessor.py  test_word_tokenizer.py
